
syntax = "proto3";

package stocktrading;
option java_multiple_files=true;
option java_package="com.fwu.ns.grpc";
option java_outer_classname="StockTradingProto";

service StockTradingService{

// SERVER streaming
  rpc subscribeStockPrice(StockRequest) returns (stream StockResponse);
}

message StockRequest{
  string stock_symbol=1;
}

message StockResponse{
  string stock_symbol=1;
  double price=2;
  string timestamp=3;
}